Upgrade to 3.0: Loads news netbox base templates

--- a/templates/ipamtree/ipamtree.html
+++ b/templates/ipamtree/ipamtree.html
@@ -1,5 +1,6 @@
-{% extends 'base.html' %}
-
+{% extends 'base/layout.html' %}
+{% load static %}
+{% load helpers %}
 {% block content %}
 
 <style>
