--- a/templates/ipamtree/ipamtree.html
+++ b/templates/ipamtree/ipamtree.html
@@ -36,6 +36,8 @@
 
 {% block javascript %}
 
+<script src="{% static 'jquery/jquery-3.5.1.min.js' %}"></script>
+<script src="{% static 'jquery-ui-1.12.1/jquery-ui.min.js' %}"></script>
 <script src="//cdn.jsdelivr.net/npm/jquery.fancytree@2.27/dist/jquery.fancytree-all-deps.min.js"></script>
 <script src="/static/ipamtree.js"></script>
 
