Add column IP role in tree

--- a/templates/ipamtree/ipamtree.html
+++ b/templates/ipamtree/ipamtree.html
@@ -25,9 +25,10 @@
     <col ></col>
     <col ></col>
     <col ></col>
+    <col ></col>
     </colgroup>
     <thead>
-      <tr> <th></th> <th>Description/Device</th> <th>Status</th> <th>Utilization</th> <th>Site</th> <th>Vlan</th> </tr>
+      <tr> <th></th> <th>Description/Device</th> <th>Status</th> <th>Role</th> <th>Utilization</th> <th>Site</th> <th>Vlan</th> </tr>
     </thead>
   </table>
 
